# jakt-intellij-plugin

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clion/src/main/resources/: org.serenityos.clion.xml  org.serenityos.jakt.clion.xml
idea/src/main/resources/: org.serenityos.idea.xml
jakt-jna-binding/: Cargo.toml  build_bindings.sh
jakt-jna-binding/src/: lib.rs
src/main/kotlin/org/serenityos/jakt/: JaktAnnotator.kt  JaktBraceMatcher.kt  JaktColorSettingsPage.kt  JaktCommenter.kt  JaktDeclarationRangeHandler.kt  JaktFile.kt  JaktFindUsagesProvider.kt  JaktFoldingBuilder.kt  JaktLanguage.kt  JaktMoveElementLeftRightHandler.kt  JaktNamesValidator.kt  JaktParameterInfoHandler.kt  JaktParserDefinition.kt  JaktParserUtil.kt  JaktQuoteHandler.kt  JaktRefactoringSupportProvider.kt  (+4 more)
src/main/resources/assets/: icon.psd
src/main/resources/grammar/: Jakt.bnf  Jakt.flex
src/main/resources/intentionDescriptions/ClassToStructKeywordIntention/: after.jakt.template  description.html
src/main/resources/intentionDescriptions/FunctionBlockBodyToExprIntention/: after.jakt.template  before.jakt.template  description.html
src/main/resources/intentionDescriptions/FunctionExprBodyToBlockIntention/: after.jakt.template  before.jakt.template
src/main/resources/intentionDescriptions/ImportNSDeclarationIntention/: after.jakt.template  before.jakt.template  description.html
src/main/resources/intentionDescriptions/StructToClassKeywordIntention/: after.jakt.template  description.html
src/main/resources/testData/: ParsingTestData.jakt
(+321 files in other folders)
