[package]
name = "jakt-jna-binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "jakt"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.126"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"

# TODO: Upstream changes and change this to the main repo
jakt = { git = "https://github.com/mattco98/jakt.git" }
